test(style): remove gradient background from h2 for improved readability fix(index): make CV download button visible

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,9 +76,6 @@ h2 {
     font-size: 40px;
     font-weight: 700;
     text-transform: uppercase;
-    background: -webkit-gradient(linear, left top, right top, from(#ff8800), to(#ff416c));
-    background: -o-linear-gradient(left, #ff8800, #ff416c);
-    background: linear-gradient(90deg, #ff8800, #ff416c);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
